Made changes to monster and hero classes and added folder for enums

--- a/Dungeon_Crawler/Dungeon_Crawler.Domain/Dungeon_Crawler.Domain.csproj
+++ b/Dungeon_Crawler/Dungeon_Crawler.Domain/Dungeon_Crawler.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dungeon_Crawler.Data\Dungeon_Crawler.Data.csproj" />
+  </ItemGroup>
+
 </Project>
